--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ material = "1.12.0"
 activity = "1.10.1"
 constraintlayout = "2.2.1"
 gridlayout = "1.0.0"
+androidx-cardview = "1.0.0" # Добавляем версию для CardView
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -22,6 +23,7 @@ androidx-activity = { group = "androidx.activity", name = "activity", version.re
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-gridlayout = { group = "androidx.gridlayout", name = "gridlayout", version.ref = "gridlayout" }
 gson = { group = "com.google.code.gson", name = "gson", version = "2.10.1" }
+androidx-cardview = { module = "androidx.cardview:cardview", version.ref = "androidx-cardview" } # Добавляем CardView
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
